--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -2,14 +2,8 @@
 name: First Workflow                                               
 on: push                                                  
 jobs:                         
-  first-job:                           
-    name: Say hi                           
-    runs-on: ubuntu-latest                           
-    steps:                           
-    - name: Print a greeting                             
-      run: echo Hi from our first workflow!
-  second-job:
-    name : Connect to VPS
+  build:
+    name : Connect to VPS and building
     runs-on: ubuntu-latest
     steps:
     - name: executing remote ssh commands using password
@@ -19,4 +13,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
-        script: mkdir lol
+        script: rm rf lol
